# AudoPlay

./: .gitignore  .gitmodules  CMakeLists.txt  Directory.Build.props  aSoundAgent.csproj
doc/: readme.md
env/: CMakeLists.txt
src/: main.cs  main.cxx
